Fixed bug with upload. ThreadPoolExecutor was rejecting more than 5 uploads. Added a dialog that is shown when all the downloads are finished.
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@31473 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4